syntax = "proto3";

package auth;

service AuthService {
  rpc SignIn (RegisterDto) returns (UserAuth);
  rpc LogIn (LoginDto) returns (Tokens);
  rpc DeleteAccount (DeleteAccountRequest) returns (DeleteAccountResponse);
  rpc LogOut (LogOutRequest) returns (Empty);
  rpc RefreshTokens (RefreshTokensRequest) returns (Tokens);
  rpc ProviderAuth (ProviderAuthRequest) returns (Tokens);
}

message RegisterDto {
  string email = 1;
  string password = 2;
}

message LoginDto {
  string email = 1;
  string password = 2;
  string agent = 3;
}

message UserAuth {
  string email = 1;
  string password = 2;
}

message RefreshToken {
  string token = 1;
  string exp = 2;
  string userId = 3;
  string userAgent = 4;
}

message Tokens {
  string accessToken = 1;
  RefreshToken refreshToken = 2;
}

message DeleteAccountRequest {
  string id = 1;
  JwtPayload user = 2;
}

message DeleteAccountResponse {
  string id = 1;
}

message LogOutRequest {
  string id = 1;
  JwtPayload user = 2;
}

message RefreshTokensRequest {
  string refreshToken = 1;
  string agent = 2;
}

message ProviderAuthRequest {
  string email = 1;
  string agent = 2;
  Provider provider = 3;
}

message JwtPayload {
  string id = 1;
  repeated Role roles = 2;
  string email = 3;
}

message Empty {}

enum Provider {
  GOOGLE = 0;
}

enum Role {
  ADMIN = 0;
  USER = 1;
}
